--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-react-views": "^0.11.0",
     "http-errors": "~1.6.3",
     "mongodb": "^3.3.3",
     "monk": "^7.1.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
