--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "http-errors": "~1.6.3",
     "mongodb": "^3.3.3",
     "monk": "^7.1.1",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "react": "^16.10.2",
+    "react-alert": "^6.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2"
   }
 }
