--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "babel": "^6.23.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
