--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel": "^6.23.0",
+    "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.15",
     "mongodb": "^3.3.3",
     "monk": "^7.1.1",
     "morgan": "~1.9.1",
@@ -25,5 +27,11 @@
     "react-alert": "^6.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
